app/assets/stylesheets/ViSH_style_guide/general/layouts/_header.css.sass
.navbar-main
  @include box-shadow(0 0 8px 0 rgba(0,0,0,0.2))
  background-color: white
  position: fixed
  height: 65px
  font-size: 0.8em
  padding: 15px
  border: 0
  z-index: $zindex-navbar-fixed
  width: 100%

  @media (max-width: 768px)
    padding: 12px 0
    height: 55px
  .container-fluid
    .btn-navbar
      padding: 4px 8px
      display: none
      float: right
      @media (max-width: 768px)
        display: block
    .brand
      font-size: 2em
      float: left
      .logo
        color: #333
        font-weight: 200
        outline: none
        .logo_bold
          font-weight: 600

    .hidden-phone
      @media (max-width: 768px)
        display: none
      .navbar-nav
        .btn-primary a
          color: white
        .btn-secondary a
          color: $gray-dark
        .dropdown
          .dropdown-menu
            padding: 10px !important
            border-radius: $border-radius-base
          .user-menu, .add-menu
            padding: 0 !important
            li
              padding: 0
              a
                padding: 8px
                &:hover, &:active,&:focus
                  background-color: $gray-darker !important
                  color: white
              .notification
                color: $brand-primary

          .dropdown-menu:before, .dropdown-menu:after
            display: none
          form
            margin: 0
            min-width: 285px
            .checkbox
              display: block
              width: 0
              color: white
            input[type="email"]
              margin-bottom: 5px
            input[type=checkbox]
              opacity: 1
            a
              color: gray
              font-size: 0.9em
              float: left
              &:hover
                color: white
            .btn
              margin-top: 15px
        .dropdown.open > .dropdown-toggle,
        .dropdown.active > .dropdown-toggle,
        .dropdown.open.active > .dropdown-toggle
          background: transparent !important

      //************************
      //input de quick search
      //************************
      .search-ui
        float: right
        .search-query
          margin-bottom: .4em
        .quick-search, .mat
          width: 256px
          margin-right: 5px
          .search-nav
            input[type="text"]
              height: 36px
            .search_button_class
              background: transparent
              color: #000
              border: none
              position: relative
              left: 224px
              bottom: 40px
            .mat
              background: $gray-dark
              display: none
              position: relative
              z-index: 10
              @include border-bottom-radius ($border-radius-base)
              @media (max-width: 768px)
                width: 80.5%
                left: 15px
                top: 87px
              @media (max-width: 635px)
                width: 80%
              @media (max-width: 560px)
                width: 79.2%
              @media (max-width: 485px)
                width: 78%
              @media (max-width: 430px)
                width: 77%
              .spinner
                margin: 35px auto 0 !important
                display: none
              .query_too_short
                @include border-bottom-radius ($border-radius-base)
                color: $white
                text-align: center
                padding: 3px
                margin-top: 2px
              .no_results
                display: block
                @include border-bottom-radius ($border-radius-base)
                color: $white
                background-color: $brand-primary
                text-align: center
                padding: 3px
                margin-top: 2px

              .results
                padding: 5px
                height: auto
                text-align: center
                ul
                  float: none                  
                  @include border-bottom-radius ($border-radius-base)
                  @include items
                  margin: 0
                  .add-item
                    display: none
                  li.box-item
                    @include excursion-small
                    margin: 4px
                    width: 96%
                    border: none
                    max-height: 44px
                    .container-img
                      width: 24% !important
                      .avatar img
                        margin-top: -8px
                      .img-box
                        i
                          font-size: 2em
                          padding-top: 4px
                    .caption
                      padding: 4px
                      width: 72%
                      h6, .count-followers
                        text-align: left
                      h6
                        height: 20px
                    .corner-item, .add, .info-bottom, hr
                      display: none
                  li, .container-img, .caption
                    max-height: 44px
                  .more
                    margin: 4px
                    width: 96%
                    background: $gray-darker-extra
                    padding: 8px 0
                    display: inline-block
                    cursor: pointer
                    &:hover
                      background: $gray-darker
                    a
                      color: $gray
                      padding: 8px 52px
                      &:hover
                        color: $white

                  .img-box
                    padding-bottom: 0

    //****************************************************
    //menu for small screens (phones&tablets) up to 991px
    //****************************************************
    .hidden-desktop
      position: absolute
      right: 16px
      top: 32px
      .navbar-nav
        width: 256px
        background: $gray-darker
        padding: 12px
        li
          width: 100%
          display: block
          font-size: 1.1em
          a
            color: $white
            padding: 8px
        li.sign_in_mobile
          .dropdown-toggle
            width: 100%
          .dropdown-menu
            padding: 10px
            border-radius: $border-radius-base
            @include transition (all 0.2s ease 0s)
            .form-group
              margin-left: 0 !important
              margin-right: 0 !important
            //log in
            input[type="email"]
              margin-bottom: 4px
            .checkbox
              padding: 0 4px
              .lbl
                color: white
            .remember_password
              margin-top: 10px
              a
                color: $gray-light
                font-size: 1em
            .btn_ok
              width: 100%
            //languages
            li > a
              img
                margin-right: 4px
        .user
          margin: 0
          a
            line-height: 2.5
            font-weight: 600
            img
              border-radius: $border-radius-base
              border: 1px solid $orange-gray-45
              height: 30px
              margin-right: 3px
        hr
          margin: 0
        .navbar-search
          width: 100%
          margin-bottom: 36px
          padding: 10px 0
          input, button
            float: left
            border: none
          input
            width: 84%
          button
            width: 16%
            padding: 8px
            i
              margin: 0

.navbar-transparent
  background-color: transparent
  box-shadow: none
  .container-fluid
    .brand
      .logo
        color: white

//****************************************************

#warning_cookie_bar
  display: none
  width: 100%
  margin: 0px
  text-align: center
  color: $white
  background: rgba(0, 0, 0, 0.8)
  height: auto
  z-index: 1010
  position: fixed
  bottom: 0
  padding: 20px

  p
    border-radius: 0 0 10px 10px
    color: $white
    margin: 0 auto
    font-family: $corporate-font-family-sans-serif-Medium
    width: 80%
  a
    color: $gray
    font-family: $corporate-font-family-sans-serif-Bold
    border: 1px solid $gray
    margin: 20px 0 0 0
    &:hover
      color: $white
      border: 1px solid $white
  h3
    margin-top: 0

//****************************************************

.photo_user
  a
    padding: 0 4px !important
    img
      width: 36px
      height: 36px

